// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Greeting message should greet enrolled users 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        welcome-known
    </Say>
    <Gather input="dtmf speech" method="POST" language="en-GB" hints="mobile money,money,bill,pay,pay bill,update,account,update account" speechTimeout="auto" numDigits="1" timeout="5" speechModel="numbers_and_commands">
        <Say language="en-GB" voice="Polly.Emma-Neural">
            mobile-money-prompt
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            bill-prompt
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            account-prompt
        </Say>
    </Gather>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should greet strangers 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        welcome-stranger
    </Say>
    <Gather input="dtmf speech" method="POST" language="en-GB" hints="record,sign up,enrol,mobile money,money,bill,pay,pay bill,update,account,update account" speechTimeout="auto" numDigits="1" timeout="5" speechModel="numbers_and_commands">
        <Say language="en-GB" voice="Polly.Emma-Neural">
            create-account-prompt-1
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            mobile-money-prompt
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            bill-prompt
        </Say>
        <Say language="en-GB" voice="Polly.Emma-Neural">
            account-prompt
        </Say>
    </Gather>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "1"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./en-DEV/enrol
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "2"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        not-implemented
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "3"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        not-implemented
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "4"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        not-implemented
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "4"} 2`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"Digits": "5"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"SpeechResult": "sign up"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Redirect method="GET">
        ./en-DEV/enrol
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer {"SpeechResult": "swimming pool"} 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;

exports[`Greeting message should process answer null 1`] = `
<?xml version="1.0" encoding="UTF-8"?>
<Response>
    <Say language="en-GB" voice="Polly.Emma-Neural">
        did-not-understand
    </Say>
    <Redirect method="GET">
        ./en-DEV
    </Redirect>
</Response>
`;
